add new source. also active class

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <h1 class="main-headline">faq</h1>
     <div class="main-accordeon">
-      <div class="main-question">
+      <div class="main-question ">
         <p>How many team members can I invite?</p> <img src="./images/icon-arrow-down.svg" id="question" alt="">
       </div>
-      <div class="main-answer" id="answer">
+      <div class="main-answer active" id="answer">
         You can invite up to 2 additional users on the Free plan. There is no limit on
         team members for the Premium plan.
       </div>
