--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="main">
 
     <h1 class="main-headline">faq</h1>
-    <div class="main-accordeon">
+    <div class="main-accordeon" id="accordeon">
       <div class="main-question ">
         <p>How many team members can I invite?</p> <img src="./images/icon-arrow-down.svg" id="question" alt="">
       </div>
