--- a/index.html
+++ b/index.html
@@ -21,43 +21,53 @@
   <section class="main">
 
     <h1 class="main-headline">faq</h1>
-    <div class="main-accordeon" id="accordeon">
-      <div class="main-question ">
-        <p>How many team members can I invite?</p> <img src="./images/icon-arrow-down.svg" id="question" alt="">
-      </div>
-      <div class="main-answer active" id="answer">
-        You can invite up to 2 additional users on the Free plan. There is no limit on
-        team members for the Premium plan.
-      </div>
-      <div class="underline"></div>
-      <div class="main-question">
-        <p>What is the maximum file upload size?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-      </div>
-      <div class="main-answer" id="answer">
-        <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+    <div class="main-accordeon" id="accordion">
+      <div class="panel">
+        <div class="main-question active">
+          <p>How many team members can I invite?</p> <img src="./images/icon-arrow-down.svg" id="question" alt="">
+        </div>
+        <div class="main-answer" id="answer">
+          You can invite up to 2 additional users on the Free plan. There is no limit on
+          team members for the Premium plan.
+        </div>
       </div>
       <div class="underline"></div>
-      <div class="main-question">
-        <p>How do I reset my password?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-      </div>
-      <div class="main-answer" id="answer">
-        <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-          A reset link will be emailed to you.</p>
+      <div class="panel">
+        <div class="main-question">
+          <p>What is the maximum file upload size?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
+        </div>
+        <div class="main-answer" id="answer">
+          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+        </div>
       </div>
       <div class="underline"></div>
+      <div class="panel">
+        <div class="main-question">
+          <p>How do I reset my password?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
+        </div>
+        <div class="main-answer" id="answer">
+          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</p>
+        </div>
+      </div>
+      <div class="underline"></div>
+      <div class="panel">
+        <div class="main-question">
+          <p>Can I cancel my subscription?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
+        </div>
+        <div class="main-answer" id="answer">
+          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+        </div>
+      </div>
 
-      <div class="main-question">
-        <p>Can I cancel my subscription?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-      </div>
-      <div class="main-answer" id="answer">
-        <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
-      </div>
       <div class="underline"></div>
-      <div class="main-question">
-        <p>Do you provide additional support?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-      </div>
-      <div class="main-answer" id="answer">
-        Chat and email support is available 24/7. Phone lines are open during normal business hours.
+      <div class="panel">
+        <div class="main-question">
+          <p>Do you provide additional support?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
+        </div>
+        <div class="main-answer" id="answer">
+          Chat and email support is available 24/7. Phone lines are open during normal business hours.
+        </div>
       </div>
       <div class="underline"></div>
 
