--- a/index.html
+++ b/index.html
@@ -1,88 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="main.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="main.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Frontend Mentor | FAQ Accordion Card</title>
+  </head>
 
-  <title>Frontend Mentor | FAQ Accordion Card</title>
-
-
-</head>
-
-<body>
-  <div class="main-image">
-    <img src="./images/illustration-woman-online-mobile.svg" alt="">
-  </div>
-  <section class="main">
-
-    <h1 class="main-headline">faq</h1>
-    <div class="main-accordeon" id="accordion">
-      <div class="panel">
-        <div class="main-question active">
-          <p>How many team members can I invite?</p> <img src="./images/icon-arrow-down.svg" id="question" alt="">
-        </div>
-        <div class="main-answer" id="answer">
-          You can invite up to 2 additional users on the Free plan. There is no limit on
-          team members for the Premium plan.
-        </div>
-      </div>
-      <div class="underline"></div>
-      <div class="panel">
-        <div class="main-question">
-          <p>What is the maximum file upload size?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-        </div>
-        <div class="main-answer" id="answer">
-          <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
-        </div>
-      </div>
-      <div class="underline"></div>
-      <div class="panel">
-        <div class="main-question">
-          <p>How do I reset my password?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-        </div>
-        <div class="main-answer" id="answer">
-          <p>Click “Forgot password” from the login page or “Change password” from your profile page.
-            A reset link will be emailed to you.</p>
-        </div>
-      </div>
-      <div class="underline"></div>
-      <div class="panel">
-        <div class="main-question">
-          <p>Can I cancel my subscription?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-        </div>
-        <div class="main-answer" id="answer">
-          <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
-        </div>
-      </div>
-
-      <div class="underline"></div>
-      <div class="panel">
-        <div class="main-question">
-          <p>Do you provide additional support?</p><img src="./images/icon-arrow-down.svg" id="question" alt="">
-        </div>
-        <div class="main-answer" id="answer">
-          Chat and email support is available 24/7. Phone lines are open during normal business hours.
-        </div>
-      </div>
-      <div class="underline"></div>
-
-
-
-
-
-
+  <body>
+    <div class="main-image">
+      <img src="./images/illustration-woman-online-mobile.svg" alt="" />
     </div>
-  </section>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-  <script src="./main.js"></script>
-</body>
+    <section class="main">
+      <h1 class="main-headline">faq</h1>
+      <div class="main-accordeon" id="accordion">
+        <div class="panel">
+          <div class="main-question active">
+            <p>How many team members can I invite?</p>
+            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
+          </div>
+          <div class="main-answer" id="answer">
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.
+          </div>
+        </div>
+        <div class="underline"></div>
+        <div class="panel">
+          <div class="main-question">
+            <p>What is the maximum file upload size?</p>
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
+            <!-- <img src="./images/icon-arrow-down.svg" id="question" alt=""> -->
+          </div>
+          <div class="main-answer" id="answer">
+            <p>
+              No more than 2GB. All files in your account must fit your allotted
+              storage space.
+            </p>
+          </div>
+        </div>
+        <div class="underline"></div>
+        <div class="panel">
+          <div class="main-question">
+            <p>How do I reset my password?</p>
+            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
+          </div>
+          <div class="main-answer" id="answer">
+            <p>
+              Click “Forgot password” from the login page or “Change password”
+              from your profile page. A reset link will be emailed to you.
+            </p>
+          </div>
+        </div>
+        <div class="underline"></div>
+        <div class="panel">
+          <div class="main-question">
+            <p>Can I cancel my subscription?</p>
+            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
+          </div>
+          <div class="main-answer" id="answer">
+            <p>
+              Yes! Send us a message and we’ll process your request no questions
+              asked.
+            </p>
+          </div>
+        </div>
 
+        <div class="underline"></div>
+        <div class="panel">
+          <div class="main-question">
+            <p>Do you provide additional support?</p>
+            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
+          </div>
+          <div class="main-answer" id="answer">
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </div>
+        </div>
+        <div class="underline"></div>
+      </div>
+    </section>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+    <script src="./main.js"></script>
+  </body>
 </html>
