--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <div class="panel">
           <div class="main-question active">
             <p>How many team members can I invite?</p>
-            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
           </div>
           <div class="main-answer" id="answer">
             You can invite up to 2 additional users on the Free plan. There is
@@ -37,7 +36,7 @@
         <div class="panel">
           <div class="main-question">
             <p>What is the maximum file upload size?</p>
-            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <!-- <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M1 .799l4 4 4-4"
                 stroke="#F47B56"
@@ -45,7 +44,7 @@
                 fill="none"
                 fill-rule="evenodd"
               />
-            </svg>
+            </svg> -->
             <!-- <img src="./images/icon-arrow-down.svg" id="question" alt=""> -->
           </div>
           <div class="main-answer" id="answer">
@@ -59,7 +58,6 @@
         <div class="panel">
           <div class="main-question">
             <p>How do I reset my password?</p>
-            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
           </div>
           <div class="main-answer" id="answer">
             <p>
@@ -72,7 +70,6 @@
         <div class="panel">
           <div class="main-question">
             <p>Can I cancel my subscription?</p>
-            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
           </div>
           <div class="main-answer" id="answer">
             <p>
@@ -83,10 +80,18 @@
         </div>
 
         <div class="underline"></div>
+
+        <!-- <details>
+          <summary>
+            Do you provide additional support?
+          </summary>
+          Chat and email support is available 24/7. Phone lines are open during
+          normal business hours.
+        </details> -->
+
         <div class="panel">
           <div class="main-question">
             <p>Do you provide additional support?</p>
-            <img src="./images/icon-arrow-down.svg" id="question" alt="" />
           </div>
           <div class="main-answer" id="answer">
             Chat and email support is available 24/7. Phone lines are open
