--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="main">
       <h1 class="main-headline">faq</h1>
       <div class="main-accordeon" id="accordion">
-        <div class="panel">
+        <!-- <div class="panel"> -->
           <div class="main-question active">
             <p>How many team members can I invite?</p>
           </div>
