--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <section class="main">
       <h1 class="main-headline">faq</h1>
       <div class="main-accordeon" id="accordion">
-        <div class="panel">
-          <div class="main-question active">
+          <div class="main-question">
             <p>How many team members can I invite?</p>
+                <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd" />
+                </svg>
           </div>
           <div class="main-answer" id="answer">
             You can invite up to 2 additional users on the Free plan. There is
@@ -33,10 +35,9 @@
           </div>
         </div>
         <div class="underline"></div>
-        <div class="panel">
           <div class="main-question">
             <p>What is the maximum file upload size?</p>
-            <!-- <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M1 .799l4 4 4-4"
                 stroke="#F47B56"
@@ -44,8 +45,7 @@
                 fill="none"
                 fill-rule="evenodd"
               />
-            </svg> -->
-            <!-- <img src="./images/icon-arrow-down.svg" id="question" alt=""> -->
+            </svg>
           </div>
           <div class="main-answer" id="answer">
             <p>
@@ -55,9 +55,17 @@
           </div>
         </div>
         <div class="underline"></div>
-        <div class="panel">
           <div class="main-question">
             <p>How do I reset my password?</p>
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="main-answer" id="answer">
             <p>
@@ -67,9 +75,17 @@
           </div>
         </div>
         <div class="underline"></div>
-        <div class="panel">
           <div class="main-question">
             <p>Can I cancel my subscription?</p>
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="main-answer" id="answer">
             <p>
@@ -80,18 +96,17 @@
         </div>
 
         <div class="underline"></div>
-
-        <!-- <details>
-          <summary>
-            Do you provide additional support?
-          </summary>
-          Chat and email support is available 24/7. Phone lines are open during
-          normal business hours.
-        </details> -->
-
-        <div class="panel">
           <div class="main-question">
             <p>Do you provide additional support?</p>
+            <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M1 .799l4 4 4-4"
+                stroke="#F47B56"
+                stroke-width="2"
+                fill="none"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="main-answer" id="answer">
             Chat and email support is available 24/7. Phone lines are open
