--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
         <img class="test" src="./images/bg-pattern-mobile.svg" alt="" />
       </div>
       <div class="main-image desktop">
-        <img src="./images/illustration-box-desktop.svg" alt="" />
+        <img
+          class="main-image_woman"
+          src="../images/illustration-woman-online-desktop.svg"
+          alt=""
+        />
+        <img
+          class="main-image_box"
+          src="./images/illustration-box-desktop.svg"
+          alt=""
+        />
       </div>
 
       <div class="main-accordion" id="accordion">
